Bug 691431 - segfault when converting to tiff with -dUseCIEColor
Summary: segfault when converting to tiff with -dUseCIEColor
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Color (show other bugs)
Version: master
Hardware: PC Windows 7
: P4 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-29 02:00 UTC by Mike
Modified: 2011-09-18 21:46 UTC (History)
0 users

See Also:
Customer: 631
Word Size: ---


Attachments
PDF file (946.65 KB, application/pdf)
2010-06-29 02:01 UTC, Mike
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike 2010-06-29 02:00:59 UTC
When converting the attached PDF file to tiff with GS head and -dUseCIEColor ghostscript crashes with segfault.
Comment 1 Mike 2010-06-29 02:01:51 UTC
Created attachment 6410 [details]
PDF file
Comment 2 Alex Cherepanov 2010-06-29 17:57:36 UTC
This problem first appeared in:
r11306 | mvrhel | 2010-05-24 12:31:58 -0400 (Mon, 24 May 2010) | 20 lines
Merge of icc_work branch into trunk.
Comment 3 Michael Vrhel 2010-06-29 23:07:05 UTC
Yes.  Need to figure out how best to handle -dUseCIEColor since we technically are always doing color management now.
Comment 4 Michael Vrhel 2010-07-01 04:58:40 UTC
Tracked down the problem with this.  With -dUseCIEColor and transparency we have PS CIE color spaces being used to define transparency group color spaces.  These need to be replaced with the appropriate default ICC color space.  PS CIE color spaces are one-way mappings and cannot be used for transparency groups.
Comment 5 Michael Vrhel 2010-07-01 17:19:07 UTC
Fixed with rev 11475.  PS CIE color space was being used for a transparency group color space when -dUseCIEColor was enabled.  This should not be allowed since those color spaces are uni-directional.  Solution was to use the appropriate ICC color space in place of the PS CIE color space.  Note that the equivalent ICC color space to the PS color space could not be used since it too is uni-directional.
Comment 6 Marcos H. Woehrmann 2011-09-18 21:46:13 UTC
Changing customer bugs that have been resolved more than a year ago to closed.