Fix for Bug 691431.  This was caused by a PS CIE color space being used for a transparency group color space.  That really should not be allowed since those color spaces are unidirectional.  They are installed though when -dUseCIEColor is used with a PDF file that has transparency. Solution is to use the default ICC profiles for the group color space when this occurs.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11475 a1074d23-0009-0410-80fe-cf8c14f379e6